backport auth/util changes
